--- a/docs/content/references/sui-sdks.mdx
+++ b/docs/content/references/sui-sdks.mdx
@@ -20,6 +20,9 @@ Sui provides developer kits that act as wrappers for the Sui API. The Sui commun
 <Card title="TypeScript SDK" href="https://sdk.mystenlabs.com/typescript">
     TypeScript SDK for integrating Sui in your TS dApps.
 </Card>
+<Card title="zkSend SDK" href="https://sdk.mystenlabs.com/zksend">
+    zkSend SDK for Simply share a link to send SUI.
+</Card>
 </Cards>
 
 ## Community SDKs
