[Doc] indicate the pruning config suitable for validators

--- a/docs/content/guides/operator/data-management.mdx
+++ b/docs/content/guides/operator/data-management.mdx
@@ -99,9 +99,9 @@ If the information about the transaction digest, effects, events, or checkpoints
 
 Use the examples in this section to configure your Sui Full node. You can copy the examples, and then, optionally, modify the values as appropriate for your environment. 
 
-### Minimal Full node
+### Validator and Minimal Full Node
 
-This configuration keeps disk usage to a minimum. A Full node with this configuration cannot answer queries that require indexing or historic data.
+This configuration keeps disk usage to a minimum. It is suitable for most validators. A full node with this configuration cannot answer queries that require indexing or historic data.
 
 ```yaml
 # Do not generate or maintain indexing of Sui data on the node
@@ -115,7 +115,7 @@ authority-store-pruning-config:
   max-transactions-in-batch: 1000
   # end of default values
 
-  # Prune historic object versions
+  # Prune historic object versions as soon as possible.
   num-epochs-to-retain: 0
   # Prune historic transactions of the past epochs
   num-epochs-to-retain-for-checkpoints: 2
