--- a/docs/content/guides/operator/data-management.mdx
+++ b/docs/content/guides/operator/data-management.mdx
@@ -99,7 +99,7 @@ If the information about the transaction digest, effects, events, or checkpoints
 
 Use the examples in this section to configure your Sui Full node. You can copy the examples, and then, optionally, modify the values as appropriate for your environment. 
 
-### Validator and Minimal Full Node
+### Validator and minimal Full node
 
 This configuration keeps disk usage to a minimum. It is suitable for most validators. A full node with this configuration cannot answer queries that require indexing or historic data.
 
