--- a/docs/content/guides/operator/data-management.mdx
+++ b/docs/content/guides/operator/data-management.mdx
@@ -101,7 +101,7 @@ Use the examples in this section to configure your Sui Full node. You can copy t
 
 ### Validator and minimal Full node
 
-This configuration keeps disk usage to a minimum. It is suitable for most validators. A full node with this configuration cannot answer queries that require indexing or historic data.
+This configuration keeps disk usage to a minimum. It is suitable for most validators. A Full node with this configuration cannot answer queries that require indexing or historic data.
 
 ```yaml
 # Do not generate or maintain indexing of Sui data on the node
