fix: update links

--- a/docs/content/concepts/cryptography/zklogin.mdx
+++ b/docs/content/concepts/cryptography/zklogin.mdx
@@ -320,7 +320,7 @@ The following options support a zkLogin signature over either transaction data o
 
 ### Can I use zkLogin inside a multisig wallet? 
 
-Yes. See the [Multisig Guide](../../guides/developer/cryptography/multisig.mdx) for more details.
+Yes. See the [Multisig Guide](https://sdk.mystenlabs.com/typescript/cryptography/multisig#multisig-with-zklogin) for more details.
 
 ## Related links
 
