Aligned reference to lib with doc standard

--- a/docs/content/references/sui-sdks.mdx
+++ b/docs/content/references/sui-sdks.mdx
@@ -31,6 +31,9 @@ While the community projects are expertly developed, their maintenance and commu
 :::
 
 <Cards>
+<Card title="dApp Kit (Vue)" href="https://github.com/SuiFansCN/suiue">
+    Sui dApp kit for the Vue framework.
+</Card>
 <Card title="Dart SDK" href="https://github.com/mofalabs/sui">
     A cross-platform Sui SDK for mobile, web, and desktop.
 </Card>
