--- a/docs/content/guides/developer/cryptography/multisig.mdx
+++ b/docs/content/guides/developer/cryptography/multisig.mdx
@@ -5,7 +5,7 @@ description: Guide on how to create a multisig transaction and then submit it ag
 
 The following steps demonstrate how to create a multisig transaction and then submit it against a local network using the [Sui CLI](/references/cli.mdx). A transaction can be the transfer of an object, the publish or upgrade of a package, the payment of SUI, and so on. To learn how to set up a local network, see [Connect to a Local Network](/guides/developer/getting-started/local-network.mdx). 
 
-To learn more how to create multisig address and create multisig transaction from Typescript SDK, see [this page](https://sdk.mystenlabs.com/typescript/cryptography/multisig) for details. 
+To learn more about how to create multisig addresses and create multisig transactions using the TypeScript SDK, see the [SDK documentation](https://sdk.mystenlabs.com/typescript/cryptography/multisig) for details. 
 
 ## Step 1: Create keys
 
