--- a/docs/content/guides/developer/cryptography/multisig.mdx
+++ b/docs/content/guides/developer/cryptography/multisig.mdx
@@ -153,4 +153,4 @@ sui client execute-signed-tx --tx-bytes <TX_BYTES> --signatures <SERIALIZED-MULT
 ## Related links
 
 - [Multisig](../../../concepts/cryptography/transaction-auth/multisig.mdx): Definition of multisig transactions on the Sui network and how to use it with CLI.
-- [Multisig Typescript SDK](https://sdk.mystenlabs.com/typescript/cryptography/multisig): How to create multisig address and sign transactions using the Sui SDK.
+- [Multisig Typescript SDK](https://sdk.mystenlabs.com/typescript/cryptography/multisig): How to create multisig addresses and sign transactions using the Sui SDK.
