--- a/sdk/docs/pages/zksend/link-builder.mdx
+++ b/sdk/docs/pages/zksend/link-builder.mdx
@@ -12,7 +12,7 @@ import { Callout } from 'nextra/components';
 
 ## Limitations
 
-- zkSend only supports mainnet at this time.
+- zkSend only supports Mainnet at this time.
 - Objects within links must be publicly transferrable.
 
 ## Create a link
@@ -128,8 +128,8 @@ await link.create({
 ## Claim redirect
 
 You can configure a redirect for the link, which will redirect the user to a URL of your choice
-after the link has been claimed. This is useful for dApps that want to use zkSend as an onboarding
-tool, and have the user redirected to their dApp after claiming the link.
+after the link has been claimed. This is useful for dApps that want to use zkSend / Stashed as an
+onboarding tool, and have the user redirected to their dApp after claiming the link.
 
 To configure a redirect, you need to provide a `redirect` object when creating the link. This object
 takes the following params:
@@ -137,10 +137,10 @@ takes the following params:
 - **`url`** - The URL to redirect to after the link has been claimed.
 - **`name`** - The name of your dApp. This will be shown to the user when claiming the link.
 
-When redirecting to the URL, if the user claims with zkLogin, then zkSend will automatically add a
-`zksend_address` query parameter to the URL, containing the Sui address of the user that claimed the
-asset. The [zkSend wallet](./dapp.mdx) will automatically read this query parameter, and consider
-itself connected as a result of a claim redirect.
+When redirecting to the URL, if the user claims with zkLogin, then Stashed will automatically add a
+`stashed_address` query parameter to the URL, containing the Sui address of the user that claimed
+the asset. The [Stashed wallet](./dapp.mdx) will automatically read this query parameter, and
+consider itself connected as a result of a claim redirect.
 
 ```ts
 import { ZkSendLinkBuilder } from '@mysten/zksend';
