--- a/sdk/docs/pages/typescript/v1-migration.mdx
+++ b/sdk/docs/pages/typescript/v1-migration.mdx
@@ -44,6 +44,7 @@ Ad part of the 1.0 release the `@mysten/sui.js` package has been renamed to `@my
 - removed txb.pure(rawValue)
 - Added support for (txb) => input as transaction arguments
 - renamed packageId -> package in Upgrade command
+- makeMoveVec `objects` -> `elements`
 
 ### exports
 
@@ -77,3 +78,7 @@ Removed `is` and `assert` helpers
 
 - changed useSignAndExecuteTransactionBlock
 - transactions are now executed in wallets rather than in dapps by default
+
+# TODO:
+
+- rename transactions to commands?
