--- a/docs/content/guides/developer/sui-101/create-coin.mdx
+++ b/docs/content/guides/developer/sui-101/create-coin.mdx
@@ -8,15 +8,12 @@ Publishing a coin on Sui is nearly as straightforward as publishing a new type. 
 
 ```move
 module examples::mycoin {
-    use std::option;
     use sui::coin::{Self, Coin, TreasuryCap};
-    use sui::transfer;
-    use sui::tx_context::{Self, TxContext};
 
     /// The type identifier of coin. The coin will have a type
     /// tag of kind: `Coin<package_object::mycoin::MYCOIN>`
     /// Make sure that the name of the type matches the module's name.
-    struct MYCOIN has drop {}
+    public struct MYCOIN has drop {}
 
     /// Module initializer is called once on module publish. A treasury
     /// cap is sent to the publisher, who then controls minting and burning
