chore: remove repetitive words
Signed-off-by: kethykang <kangwennan@outlook.com>

--- a/sdk/docs/pages/dapp-kit/wallet-hooks/useSignTransactionBlock.mdx
+++ b/sdk/docs/pages/dapp-kit/wallet-hooks/useSignTransactionBlock.mdx
@@ -59,4 +59,4 @@ function MyComponent() {
 ## Result
 
 - `signature`: The signature of the message, as a Base64-encoded `string`.
-- `transactionBlockBytes`: The serialized transaction bytes, as a a Base64-encoded `string`.
+- `transactionBlockBytes`: The serialized transaction bytes, as a Base64-encoded `string`.
