--- a/docs/content/guides/developer/nft/nft-rental.mdx
+++ b/docs/content/guides/developer/nft/nft-rental.mdx
@@ -1,5 +1,5 @@
 ---
-title: NFT Rental 
+title: NFT Rental Example
 description: An example using the Kiosk Apps standard that provides the ability for users to rent NFTs according to the rules of a provided policy instead of outright owning them. This approach closely aligns with the ERC-4907 renting standard, making it a suitable choice for Solidity-based use cases intended for implementation on Sui.
 keywords: [ERC-721, NFT]
 ---
