--- a/docs/content/references/cli/client.mdx
+++ b/docs/content/references/cli/client.mdx
@@ -190,11 +190,17 @@ $ sui client dynamic-field 0x5
 
 ### Send SUI or objects
 
-In this example, let's see how to transfer SUI or transfer an object from one address to another. First all, there two main commands for sending SUI or transfering objects: Pay and Transfer. 
-Each of these commands, has some sister commands: PaySui, PayAllSui, and TransferSui. The main difference between Pay and Transfer is that Pay allows you to send coin to multiple recipients, whereas Transfer only accepts one recipient. Another important difference is that Pay and Transfer require a gas object that is different than the one used to send the coins, which is used to pay gas fees. 
-In contrast, PaySui, PayAllSui, and TransferSui, do not require a separate gas object. The input coin(s) will be used as the gas object.
+In this example, let's see how to transfer SUI or transfer an object from one address to another. First of all, there two main commands for sending SUI or transferring objects: `pay` and `transfer`. 
+Both `pay` and `transfer` have a few sister commands: `pay-sui`, `pay-all-sui`, `transfer-sui`. 
 
-Let's assume we have two addresses:
+The differences between these commands are:
+- commands that end in `-sui` deal with Sui's native coin, and they use the input coints to pay for gas and for transferring SUI or the object.
+- `pay-` commands typically deal with coins and handle gas smashing for you, whereas `transfer` commands can handle the transfer of any object that has public transfer, meaning any object that has the `store` ability. 
+- `pay` commands allow you to send coins to multiple recipients, whereas `transfer` commands only accept one recipient.
+- `pay-all-sui` is a special case of `pay-sui` that offers a way to transfer the entire balance after smashing.
+- `transfer-sui` is a legacy command and has been entirely superseded by `pay-sui` or `pay-all-sui` depending on whether an amount is specified or not.
+
+Assume you have two addresses:
 
 ```
 ╭───────────────────┬────────────────────────────────────────────────────────────────────┬────────────────╮
@@ -220,10 +226,10 @@ sui client gas hungry-spodumene
 ╰────────────────────────────────────────────────────────────────────┴────────────────────┴──────────────────╯
 ```
 
-We want to send 0.5 SUI to `eloquent-amber`. Given that we have a few gas coins, we can use Pay. If we would have had only one gas coin, then we could have only used TransferSui, or PaySui, or we would have needed to split the coin first to have another coin to use for paying gas. In this case, let's use the TransferSui command as we will not need to provide a gas coin to be used for the gas fees. We need to pass the address (or its alias) of the address to which SUI is sent, which coin to use to transfer SUI from, and the amount of SUI to transfer.
+You want to send 0.5 SUI to `eloquent-amber`. Given that you have a few gas coins, you can use `pay`. If only one gas coin exists, then you need to use `transfer-sui` or `pay-sui`, or you would need to split the coin first to have another coin to use for paying gas. In this case, let's use the `pay-sui` command as you do not need to provide a separate gas coin to be used for the gas fees. In the command below, you set the recipient to be `eloquent-amber`, which coin to use to transfer SUI from, and the amount of SUI to transfer.
 
 ```
-sui client transfer-sui --to eloquent-amber --sui-coin-object-id 0xc9b447fff18f13fa035e028534b8344d5fc8a8760248fad10155e78f44dc3a52 --amount 500000000 --gas-budget 5000000
+sui client pay-sui --recipients eloquent-amber --input-coins 0xc9b447fff18f13fa035e028534b8344d5fc8a8760248fad10155e78f44dc3a52 --amounts 500000000 --gas-budget 5000000
 ```
 
 The result is:
@@ -353,7 +359,7 @@ Transaction Digest: AsWkciVhLHeCmqVipjjyAA7Hv5y87pFjHS59K8m4zBJV
 
 ```
 
-We can check the gas for the sender and the recipient's coins using `sui client gas <address>`. The sender now has 199.49 SUI for that gas coin that was used. 0.5 SUI was transferred, and the rest 0.01 SUI were the gas fees.
+Check the gas for the sender and the recipient's coins using `sui client gas <address>`. The sender now has 199.49 SUI for that gas coin that was used. 0.5 SUI was transferred, and the remaining 0.01 SUI paid the gas fees.
 ```
 sui client gas
 ╭────────────────────────────────────────────────────────────────────┬────────────────────┬──────────────────╮
@@ -374,14 +380,14 @@ sui client gas eloquent-amber
 ╰────────────────────────────────────────────────────────────────────┴────────────────────┴──────────────────╯
 ```
 
-If you'd like to send coins to multiple addresses, use one of the `Pay*` commands.
-
-If you'd like to transfer the whole object, you can use `sui client transfer-sui` and do not pass an amount:
+If you want to transfer the whole object, you can use `sui client pay-all-sui` or `sui client transfer-sui` (without passing the amount): 
 ```
+sui client pay-sui --recipient eloquent-amber --input-coins 0xc9b447fff18f13fa035e028534b8344d5fc8a8760248fad10155e78f44dc3a52 --gas-budget 5000000
+or
 sui client transfer-sui --to eloquent-amber --sui-coin-object-id 0xc9b447fff18f13fa035e028534b8344d5fc8a8760248fad10155e78f44dc3a52 --gas-budget 5000000
 ```
 
-Then check again the gas for `eloquent-amber`
+Then check the gas for `eloquent-amber` again:
 ```
 sui client gas eloquent-amber
 ╭────────────────────────────────────────────────────────────────────┬────────────────────┬──────────────────╮
