--- a/docs/content/guides/developer/coin/loyalty.mdx
+++ b/docs/content/guides/developer/coin/loyalty.mdx
@@ -20,7 +20,7 @@ The `init` function of the module uses the `LOYALTY` OTW to create the token. Al
 
 {@inject: examples/move/token/sources/loyalty.move#fun=init noComments}
 
-The `LOYALTY` minting function is called `reward_user`. As mentioned previously, the holder of the `TreasuryCap` can call this function to mint new loyalty tokens and send them to the desired address. The function uses the `token::mint` function to create the token and `token::transfer` to send it to the intended recepient. 
+The `LOYALTY` minting function is called `reward_user`. As mentioned previously, the holder of the `TreasuryCap` can call this function to mint new loyalty tokens and send them to the desired address. The function uses the `token::mint` function to create the token and `token::transfer` to send it to the intended recipient. 
 
 {@inject: examples/move/token/sources/loyalty.move#fun=reward_user noComments}
 
